--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 
-	<title>Find a cute animal</title>
+	<title>Happy</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
@@ -13,20 +13,12 @@
 </head>
 <body>
 	<div class="shell">
-		<nav>
-			<ul>
-			<li><a href="#bunnies">Bunnies</a></li>
-			<li><a href="#puppies">Puppies</a></li>
-			<li><a href="#kittens">Kittens</a></li>
-			<li><a href="#find">Find your own</a></li>
-			</ul>
-			<div class="spinny"></div>
-		</nav>
-		<section id="main" >
+		<nav><!--Filled by challange-item.html--></nav>
+		<div id="main" >
 			<noscript>
 				You need javascript enabled to view this site. Please check your browser settings.
-			</noscript>		
-		</section>
+			</noscript>
+		</div>
 	</div>
 </body>
 
